--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="closeDrawer">close_drawer</string>
     <string name="url_profile_temp">http://lazi.vn/files/large/5882c16b2facb14</string>
     <string name="personal">Personal</string>
+    <string name="err_network">Network unavailable</string>
 
     <string-array name="nav_item_activity_titles">
         <item>Now Playing</item>
