--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,8 @@
     <string name="url_profile_temp">http://lazi.vn/files/large/5882c16b2facb14</string>
     <string name="personal">Personal</string>
     <string name="err_network">Network unavailable</string>
+    <string name="cancel">Cancel</string>
+    <string name="no_data">No data</string>
 
     <string-array name="nav_item_activity_titles">
         <item>Now Playing</item>
