--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,8 @@
     <string name="err_web_browser">No application can handle this request.\" + \" Please install a webbrowser</string>
     <string name="str_logout">Logout</string>
     <string name="err_msg_signin">Sign into your account enable this feature</string>
+    <string name="str_fav_movies">Favourite Movies</string>
+    <string name="str_rated_movies">Rated Movies</string>
 
     <string-array name="nav_item_activity_titles">
         <item>Now Playing</item>
