--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="err_network">Network unavailable</string>
     <string name="cancel">Cancel</string>
     <string name="no_data">No data</string>
+    <string name="year">Year</string>
 
     //LoginScreen
     <string name="str_username">Username (case sensitive)</string>
